--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,4 +8,9 @@ body {
   color: white;
   margin: auto;
   height: 100vh;
+  width: 75vw;
+}
+.block{
+  background-color: #343a40;
+  border-radius: 10px;
 }
