--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,60 +1,37 @@
 <div class="container-lg content">
 
   <div class="row">
-    <div class="block col-lg-2 row">
-      <form (submit)="getData()">
-        <div class="col-md-12 form-group">
+    <div class="block col-sm-2">
+      <form (submit)="filterObjects()">
+        <div class="col-md-12">
+          <div class="form-group">
           <label for="search">Search</label>
-          <input [(ngModel)]="search" type="search" name="filter" class="form-control" placeholder="Search" aria-label="Search"
-                 id="search"/>
-        </div>
-        <div class="col-md-12">
-          <h5>Maker</h5>
-          <div class="form-group">
-            <label for="maker-name">Name</label>
-            <input [(ngModel)]="name" type="text" name="filter" class="form-control" id="maker-name">
-
+          <input [(ngModel)]="search" aria-label="Search" class="form-control" id="search" name="filter"
+                 placeholder="Search"
+                 type="search"/>
           </div>
           <div class="form-group">
-            <label for="maker-role">Role</label>
-            <input [(ngModel)]="role" type="text" name="filter" class="form-control" id="maker-role">
-          </div>
-        </div>
-        <div class="col-md-12">
-          <h5>Object</h5>
-          <div class="form-group">
-            <label for="title">Title</label>
-            <input [(ngModel)]="title" type="text" name="filter" class="form-control" id="title">
-
+            <label for="name">Artist:</label>
+            <input [(ngModel)]="name" class="form-control" id="name" name="filter" type="text">
           </div>
           <div class="form-group">
             <label for="technique">Technique</label>
-            <input [(ngModel)]="technique" type="text" name="filter" class="form-control" id="technique">
-
+            <input [(ngModel)]="technique" class="form-control" id="technique" name="filter" type="text">
           </div>
           <div class="form-group">
             <label for="objectnumber">Objectnumber</label>
-            <input [(ngModel)]="objectnumber" type="text" name="filter" class="form-control" id="objectnumber">
+            <input [(ngModel)]="objectnumber" class="form-control" id="objectnumber" name="filter" type="text">
           </div>
           <div class="form-group">
             <label for="material">Material</label>
-            <input [(ngModel)]="material" type="text" name="filter" class="form-control" id="material">
+            <input [(ngModel)]="material" class="form-control" id="material" name="filter" type="text">
           </div>
-          <div class="form-group">
-            <label for="star-year">Start year</label>
-            <input [(ngModel)]="startYear" type="number" name="filter" class="form-control" id="star-year">
-          </div>
-          <div class="form-group">
-            <label for="end-year">End year</label>
-            <input [(ngModel)]="endYear" type="number" name="filter" class="form-control" id="end-year">
-          </div>
+          <button class="btn btn-primary" type="submit" value="Submit">Search</button>
         </div>
-        <div class="block col-lg-10">
-          <button type="submit" value="Submit" class="btn btn-primary">Search</button>
-        </div>
+
       </form>
     </div>
-    <div class="block col-lg-8">
+    <div class="block col-lg-9  m-auto" style="overflow: auto">
       <img src="assets/img/Rijks_museum_logo.png">
       <br>
       Lorem ipsum dolor sit amet,
@@ -62,7 +39,21 @@
       Deleniti odit, suscipit. Accusamus alias et molestias nemo
       quibusdam vero! Animi consectetur cumque dolore,
       et facere in numquam officia porro ullam voluptas!
+
+
+      <div *ngFor="let obj of artObjects" class="cards">
+        <div class="col-sm-5">
+          <div class="card item-card">
+            <img class="card-img-top" src="{{obj.headerImage.url}}" style="width: 18rem;">
+            <div class="card-body">
+              <h4 class="card-title">{{obj.title}}</h4>
+              <button (click)="onSelect(obj.objectNumber)" class="btn btn-primary">Details</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+
 
   </div>
 
