--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -8,10 +8,16 @@
           <span>Home</span>
         </p>
       </a>
-      <a routerLink="/main">
+      <a routerLink="/landing">
         <p>
         <i class="bi bi-bar-chart-steps"></i>
           <span>Assignment 1</span>
+        </p>
+      </a>
+      <a routerLink="/main">
+        <p>
+          <i class="bi bi-bar-chart-steps"></i>
+          <span>Assignment 2</span>
         </p>
       </a>
     </div>
