async opgelost, main en detail werken volledig

--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -4,11 +4,15 @@
   </tr>
   <tr>
     <td>Image</td>
-    <td><img style="width: 20rem" src="{{artObject.headerImage.url}}" alt="img"></td>
+    <td><img alt="img" src="{{artObject.webImage.url}}"></td>
   </tr>
   <tr>
     <td>Title:</td>
     <td><h5>{{artObject.title}}</h5></td>
+  </tr>
+  <tr>
+    <td>Artist:</td>
+    <td><h5>{{artObject.principalOrFirstMaker}}</h5></td>
   </tr>
   <tr>
     <td>long title:</td>
