--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -4,6 +4,6 @@
 
   <div class="buttons col-lg-10 d-flex justify-content-center">
     <button class="btn btn-dark m-auto">Assignment 1</button>
-    <button routerLink="/main" class="btn btn-dark m-auto">Assignment 2</button>
+    <button class="btn btn-dark m-auto" routerLink="/main">Assignment 2</button>
   </div>
 </div>
