--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -2,7 +2,7 @@
 
   <div class="row">
     <div class="block col-lg-10 m-auto row">
-      <form (submit)="getObjects()">
+      <form (submit)="getFilterdObj()">
         <div class="row p-3">
           <div class="col-lg-3">
             <label for="search">Search</label>
@@ -15,16 +15,8 @@
             <input [(ngModel)]="name" class="form-control" id="name" name="filter" type="text">
           </div>
           <div class="form-group col-lg-3">
-            <label for="technique">Technique</label>
-            <input [(ngModel)]="technique" class="form-control" id="technique" name="filter" type="text">
-          </div>
-          <div class="form-group col-lg-3">
             <label for="objectnumber">Objectnumber</label>
             <input [(ngModel)]="objectnumber" class="form-control" id="objectnumber" name="filter" type="text">
-          </div>
-          <div class="form-group col-lg-3">
-            <label for="material">Material</label>
-            <input [(ngModel)]="material" class="form-control" id="material" name="filter" type="text">
           </div>
         </div>
         <button class="btn btn-primary" type="submit" value="Submit">Search</button>
@@ -42,7 +34,9 @@
       et facere in numquam officia porro ullam voluptas!
 
       <div class=" col-sm-3">
-        <div *ngFor="let obj of artObjects" class="cards">
+        <div *ngFor="
+
+      let obj of artObjects | async" class="cards">
           <div class="w-100 p-1">
             <div (click)="onSelect(obj.objectNumber, obj)" class="card item-card">
               <h6 class="card-title">{{obj.title}}</h6>
