--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,4 +1,3 @@
-
 <div class="pos-f-t">
   <div class="collapse" id="navbarToggleExternalContent">
     <div class="bg-dark p-4">
@@ -10,7 +9,7 @@
       </a>
       <a routerLink="/landing">
         <p>
-        <i class="bi bi-bar-chart-steps"></i>
+          <i class="bi bi-bar-chart-steps"></i>
           <span>Assignment 1</span>
         </p>
       </a>
@@ -23,7 +22,8 @@
     </div>
   </div>
   <nav class="navbar navbar-dark bg-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+            data-target="#navbarToggleExternalContent" data-toggle="collapse" type="button">
       <span class="navbar-toggler-icon"></span>
     </button>
   </nav>
