--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -17,6 +17,14 @@
 
 }
 
+.header {
+  margin-bottom: 20px;
+}
+
+.filter {
+  margin: auto auto 20px;
+}
+
 .cards {
   display: flex;
   flex-wrap: wrap;
