--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -7,7 +7,7 @@
           <span>Home</span>
         </p>
       </a>
-      <a routerLink="/landing">
+      <a routerLink="/anagram">
         <p>
           <i class="bi bi-bar-chart-steps"></i>
           <span>Assignment 1</span>
@@ -22,7 +22,8 @@
     </div>
   </div>
   <nav class="navbar navbar-dark bg-dark">
-    <button aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+    <button aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation"
+            class="navbar-toggler"
             data-target="#navbarToggleExternalContent" data-toggle="collapse" type="button">
       <span class="navbar-toggler-icon"></span>
     </button>
