--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,9 +1,37 @@
-<div class="content row d-flex justify-content-center">
-  <h2 class="col-md-10 d-flex justify-content-center">Mohammed Malloul</h2>
-  <h2 class="col-md-10 d-flex justify-content-center">Begonnen op 30-11-2021</h2>
-
-  <div class="buttons col-lg-10 d-flex justify-content-center">
-    <button class="btn btn-dark m-auto">Assignment 1</button>
-    <button class="btn btn-dark m-auto" routerLink="/main">Assignment 2</button>
+<div class="content ">
+  <div class="block col-lg-10 m-auto">
+    <table class="container">
+      <tr>
+        <th>Assessment assignment</th>
+      </tr>
+      <tr>
+        <td>Name</td>
+        <td><span>Mohammed Malloul</span></td>
+      </tr>
+      <tr>
+        <td>E-mail:</td>
+        <td><span>mohammed.malloul@hotmail.com</span></td>
+      </tr>
+      <tr>
+        <td>Github:</td>
+        <td><a href="https://github.com/Mohmlll"><span>https://github.com/Mohmlll</span></a></td>
+      </tr>
+      <tr>
+        <td>Start date:</td>
+        <td><span>30-11-2021</span></td>
+      </tr>
+      <tr>
+        <td>Anagrams</td>
+        <td>
+          <button class="btn btn-primary" routerLink="/anagram">Assignment 1</button>
+        </td>
+      </tr>
+      <tr>
+        <td>Rijsmuseum API</td>
+        <td>
+          <button class="btn btn-primary" routerLink="/main">Assignment 2</button>
+        </td>
+      </tr>
+    </table>
   </div>
 </div>
