Clean up and swapped detail table to a detail card

--- a/src/app/components/anagram/anagram.component.html
+++ b/src/app/components/anagram/anagram.component.html
@@ -1,7 +1,7 @@
 <div class="container-lg content ">
-  <div class="block col-lg-10 row m-auto">
-    <div class="intro col-lg-6 row">
-      <div class="col-lg-10">
+  <div class="block intro col-lg-10 row">
+    <div class="col-lg-6 row">
+      <div class="input col-lg-10">
         <label for="input">Input (Split each word with a comma ","</label>
         <input [(ngModel)]="input" class="form-control" id="input"
                placeholder="split each word with a ,"
@@ -9,12 +9,13 @@
       </div>
       <div class="col-lg-10">
         Click to get output
-        <button (click)="log()" class="btn btn-primary">get Anagram</button>
+        <button (click)="log()" class="btn btn-dark">get Anagram</button>
       </div>
-
-
     </div>
-    <table class="col-lg-6">
+  </div>
+  <div class=" block m-auto col-lg-10 row">
+    <h2 class="col-lg-10">Output</h2>
+    <table class="">
       <tr *ngFor="let key of output; let i = index">
         <td>group: {{1 + i}}</td>
         <td *ngFor="let word of key">{{word}}</td>
