--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -23,13 +23,13 @@
       <tr>
         <td>Anagrams</td>
         <td>
-          <button class="btn btn-primary" routerLink="/anagram">Assignment 1</button>
+          <button class="btn btn-dark" routerLink="/anagram">Assignment 1</button>
         </td>
       </tr>
       <tr>
         <td>Rijsmuseum API</td>
         <td>
-          <button class="btn btn-primary" routerLink="/main">Assignment 2</button>
+          <button class="btn btn-dark" routerLink="/main">Assignment 2</button>
         </td>
       </tr>
     </table>
