--- a/src/app/components/detail/detail.component.scss
+++ b/src/app/components/detail/detail.component.scss
@@ -1,3 +1,20 @@
 img {
   height: 300px;
 }
+.block{
+  -webkit-box-shadow: 10px 10px 84px -45px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 84px -45px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 84px -45px rgba(0,0,0,0.75);
+}
+img{
+  ebkit-box-shadow: 10px 10px 69px -13px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 69px -13px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 69px -13px rgba(0,0,0,0.75);
+  border-radius: 5px;
+}
+.art-card{
+  width: 100%;
+  padding: 5%;
+  background-color: #343a40;
+  color: white;
+}
