--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,31 +1,20 @@
-<div class="pos-f-t">
-  <div class="collapse" id="navbarToggleExternalContent">
-    <div class="bg-dark p-4">
-      <a routerLink="/landing">
-        <p>
-          <i class="bi bi-house-door"></i>
-          <span>Home</span>
-        </p>
-      </a>
-      <a routerLink="/anagram">
-        <p>
-          <i class="bi bi-bar-chart-steps"></i>
-          <span>Assignment 1</span>
-        </p>
-      </a>
-      <a routerLink="/main">
-        <p>
-          <i class="bi bi-bar-chart-steps"></i>
-          <span>Assignment 2</span>
-        </p>
-      </a>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" routerLink="landing">Assesment</a>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="landing">Home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="anagram">Assignment 1 <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="main">Assignment 2</a>
+      </li>
+    </ul>
   </div>
-  <nav class="navbar navbar-dark bg-dark">
-    <button aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation"
-            class="navbar-toggler"
-            data-target="#navbarToggleExternalContent" data-toggle="collapse" type="button">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  </nav>
-</div>
+</nav>
