--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,16 +6,21 @@ body {
 }
 
 .content {
-  color: white;
+  color: black;
   margin: auto;
   height: 100vh;
   width: 80vw;
   padding: 1.5%;
+
 }
 
 .block {
-  background-color: #343a40;
+  background-color: darkgray;
   border-radius: 10px;
   padding: 1%;
   width: 100%;
+  -webkit-box-shadow: 11px 9px 23px -5px rgba(0,0,0,0.75);
+  -moz-box-shadow: 11px 9px 23px -5px rgba(0,0,0,0.75);
+  box-shadow: 11px 9px 23px -5px rgba(0,0,0,0.75);
 }
+
